Always show scrollbar to avoid flickering when filtering

--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
 
     font-family: mono;
     margin: 0;
+    overflow-y: scroll;
     background-color: var(--background-color);
     color: var(--text-color);
 }
